--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<div class="container">
 
 									<header class="major">
-										<h2 style="text-align: center;">Hamidreza Kasaei</h2>
+										<h2 style="text-align: center;">Mohammadreza Kasaei</h2>
 									</header>
 									<p style="text-align: justify; color: rgb(0, 0, 0);">
 
