--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/Mohammad.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Mohammadreza Kasaei</a></h1>
 					<p>Department of Artificial Intelligence,<br />
 					University of Groningen, the Netherlands.</p>
