--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<header>
 					<span class="image avatar"><img src="images/Mohammad.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Mohammadreza Kasaei</a></h1>
-					<p>Department of Artificial Intelligence,<br />
-					University of Groningen, the Netherlands.</p>
+					<p>Institute of Electronics and Informatics Engineering,<br />
+					University of Aveiro, Portugal.</p>
 				</header>
 				<nav id="nav">
 					<ul>
