--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a target="_blank" href="https://twitter.com/HamidrezaKasaei" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a target="_blank" href="https://scholar.google.pt/citations?user=VFr_XuYAAAAJ&hl=en" class="icon fa-book"><span class="label">Google Scholar</span></a></li>
-						<li><a target="_blank" href="https://www.linkedin.com/in/hamidreza-kasaei-49b83b57/" class="icon fa-linkedin"><span class="label">linkedin</span></a></li>
-						<li><a target="_blank" href="https://github.com/SeyedHamidreza/" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a target="_blank" href="mailto:hamidreza.kasaei@rug.nl" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a target="_blank" href="https://twitter.com/MohammadKasaei" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a target="_blank" href="https://scholar.google.com/citations?user=2aY06V4AAAAJ&hl=en" class="icon fa-book"><span class="label">Google Scholar</span></a></li>
+						<li><a target="_blank" href="https://www.linkedin.com/in/mohammadreza-kasaei-0a891ab6/" class="icon fa-linkedin"><span class="label">linkedin</span></a></li>
+						<li><a target="_blank" href="https://github.com/mrkasaei" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a target="_blank" href="mailto:mohammadreza@ua.pt" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
