--- a/index.html
+++ b/index.html
@@ -66,13 +66,12 @@ I have extensive background in computer vision, machine learning and robotics. D
 During my master, I studied face recognition using single normal reference image and statistical features. Besides, I worked on middle size soccer robot and humanoid robot and obtained different ranks in RoboCup competitions. <!-- The current version of my CV is available <a href="https://www.dropbox.com/s/3dg9n4blo03krex/Hamidreza_cv.pdf?dl=1" target="_blank" style="color: rgb(0, 0, 255);">here</a>. My up-to-date list of publications can be found on my <a href="https://scholar.google.pt/citations?user=VFr_XuYAAAAJ&hl=en" target="_blank" style="color: rgb(0, 0, 255);"> Google scholar </a> or <a href="https://www.researchgate.net/profile/Hamidreza_Kasaei?ev=hdr_xprf" target="_blank" style="color: rgb(0, 0, 255);"> ResearchGate</a>.-->
 <div style="text-align: center; color: rgb(20, 0, 0);"> 
 	/
-	<a target="_blank" href="https://www.dropbox.com/s/3dg9n4blo03krex/Hamidreza_cv.pdf?dl=1"> CV</a> /
-	<a target="_blank" href="https://scholar.google.pt/citations?user=VFr_XuYAAAAJ&hl=en">Google Scholar</a> /
-	<a target="_blank" href="https://www.researchgate.net/profile/Hamidreza_Kasaei?ev=hdr_xprf" target="_blank">ResearchGate </a> /
-	<a target="_blank" href="https://www.linkedin.com/in/hamidreza-kasaei-49b83b57/">LinkedIn </a> / 
-	<a target="_blank" href="https://github.com/SeyedHamidreza/">Github </a> / 
-	<a target="_blank" href="https://www.youtube.com/channel/UCEPBEyQfiv1P8wfuYjuWy4Q">YouTube </a> / 
-	<a target="_blank" href="mailto:hamidreza.kasaei@rug.nl">Email</a> / 
+	<a target="_blank" href="https://www.dropbox.com/s/hgpz1teieoqr3kf/Mohammadreza_cv.pdf?dl=1"> CV</a> /
+	<a target="_blank" href="https://scholar.google.com/citations?user=2aY06V4AAAAJ&hl=en">Google Scholar</a> /
+	<a target="_blank" href="https://www.researchgate.net/profile/Mohammadreza_Mohades_Kasaei" target="_blank">ResearchGate </a> /
+	<a target="_blank" href="https://www.linkedin.com/in/mohammadreza-kasaei-0a891ab6/">LinkedIn </a> / 
+	<a target="_blank" href="https://github.com/mrkasaei">Github </a> / 
+	<a target="_blank" href="mailto:mohammadreza@ua.pt">Email</a> / 
 </div>
 
 
