--- a/index.html
+++ b/index.html
@@ -60,10 +60,13 @@
 									</header>
 									<p style="text-align: justify; color: rgb(0, 0, 0);">
 
+<!–– 
 I joined the Department of Artificial Intelligence of the University of Groningen as a Faculty of Science and Engineering (FSE Fellow) in August 2018. My main  research interests lie in the area of <b  style="color: rgb(0, 0, 255);"> 3D Object Perception, Grasp Affordance, and Manipulation</b>. Currently, I am developing an artificial cognitive system for assistive robots to provide a tight coupling between perception and manipulation. This coupling is necessary for assistive robots, not only to perform manipulation tasks appropriately but also to robustly adapt to new environments by handling new objects.
 
 I have extensive background in computer vision, machine learning and robotics. During my Ph.D., I got an opportunity to work on FP7 Project named <b href="http://project-race.eu/" target="_blank" style="color: rgb(0, 0, 255);">RACE: Robustness by Autonomous Competence Enhancement</b>. In this project, I was mainly responsible to develop interactive open-ended learning approaches to recognize multiple objects and their grasp affordances concurrently.  
-During my master, I studied face recognition using single normal reference image and statistical features. Besides, I worked on middle size soccer robot and humanoid robot and obtained different ranks in RoboCup competitions. <!-- The current version of my CV is available <a href="https://www.dropbox.com/s/3dg9n4blo03krex/Hamidreza_cv.pdf?dl=1" target="_blank" style="color: rgb(0, 0, 255);">here</a>. My up-to-date list of publications can be found on my <a href="https://scholar.google.pt/citations?user=VFr_XuYAAAAJ&hl=en" target="_blank" style="color: rgb(0, 0, 255);"> Google scholar </a> or <a href="https://www.researchgate.net/profile/Hamidreza_Kasaei?ev=hdr_xprf" target="_blank" style="color: rgb(0, 0, 255);"> ResearchGate</a>.-->
+During my master, I studied face recognition using single normal reference image and statistical features. Besides, I worked on middle size soccer robot and humanoid robot and obtained different ranks in RoboCup competitions.
+––>
+ <!-- The current version of my CV is available <a href="https://www.dropbox.com/s/3dg9n4blo03krex/Hamidreza_cv.pdf?dl=1" target="_blank" style="color: rgb(0, 0, 255);">here</a>. My up-to-date list of publications can be found on my <a href="https://scholar.google.pt/citations?user=VFr_XuYAAAAJ&hl=en" target="_blank" style="color: rgb(0, 0, 255);"> Google scholar </a> or <a href="https://www.researchgate.net/profile/Hamidreza_Kasaei?ev=hdr_xprf" target="_blank" style="color: rgb(0, 0, 255);"> ResearchGate</a>.-->
 <div style="text-align: center; color: rgb(20, 0, 0);"> 
 	/
 	<a target="_blank" href="https://www.dropbox.com/s/hgpz1teieoqr3kf/Mohammadreza_cv.pdf?dl=1"> CV</a> /
@@ -397,31 +400,6 @@ applications in various traffic and security cases. This study presented a novel
 <!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^ Section 4 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
 <!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^ Section 4 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
 
-<section id="four">
-<div class="container">
-<h3 style="color: rgb(0, 0, 0);">Open Positions & Students</h3>
-<p style="text-align: justify; color: rgb(0, 0, 0);">
-If you are interested in doing your Bachelor/Master/PhD thesis in one of the above areas, or working on a project with me, please send me an e-mail including:
-</p>
-
-<ul class="feature-icons" style="text-align: justify;">
-	<li class="fa-book" style="color: rgb(0, 0, 255);">Short CV</li>
-	<li class="fa-cubes" style="color: rgb(0, 0, 255);">Short motivation letter</li>
-</ul>
-
-
-<p style="text-align: justify; color: rgb(0, 0, 0);">
-The motivation letter should state (½ - 1 page):
-<ul class="feature-icons">
-	<li class="fa-diamond" style="color: rgb(0, 0, 255);">Topics that you are interested in</li>
-	<li class="fa-signal" style="color: rgb(0, 0, 255);">Type of project (theoretical/applied)</li>
-	<li class="fa-calendar" style="color: rgb(0, 0, 255);">Intended starting date</li>
-	<li class="fa-folder-open-o" style="color: rgb(0, 0, 255);">your relevant experiences</li>
-	<li class="fa-code" style="color: rgb(0, 0, 255);">Programming languages and related</li>
-</ul>
-</p>
-
-</section>
 
 <!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^ Section 5 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
 <!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^ Section 5 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
