--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 									</header>
 									<p style="text-align: justify; color: rgb(0, 0, 0);">
 
+
+I joined the Intelligent Robotic Intelligent System (IRIS) Lab of University of Aveiro as a Ph.D. student in October 2015, to work on push recovery on humanoid robots using machine learning approaches on top of analytical approaches, under the supervision of <b href="http://wiki.ieeta.pt/wiki/index.php/Nuno_Lau" target="_blank" style="color: rgb(0, 0, 255);">professor Nuno Lau</b> and <b href="http://wiki.ieeta.pt/wiki/index.php/Artur_Pereira" target="_blank" style="color: rgb(0, 0, 255);">professor Artur Pereira</b>. In this project, we intend to maintain and recover balance of a humanoid robot against pushes by learning from past experiments. This is
+necessary for humanoid robots, not only to robustly adapt to new environments by selecting suitable parameters automatically but also to perform stable walking in appropriate manners. 
+
+Before my Ph.D., I've completed my Master Degree in Computer Engineering field of Computer Architecture at the University of Isfahan. Full list of my publications and corresponding BibTeX files can be found on my Google scholar account.
 <!–– 
 I joined the Department of Artificial Intelligence of the University of Groningen as a Faculty of Science and Engineering (FSE Fellow) in August 2018. My main  research interests lie in the area of <b  style="color: rgb(0, 0, 255);"> 3D Object Perception, Grasp Affordance, and Manipulation</b>. Currently, I am developing an artificial cognitive system for assistive robots to provide a tight coupling between perception and manipulation. This coupling is necessary for assistive robots, not only to perform manipulation tasks appropriately but also to robustly adapt to new environments by handling new objects.
 
